// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component GoogleScholar  should display submission error if saving failed 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ul>
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ul>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Add your Google Scholar identifier"
    >
      <div>
        <p>
          Creating your Google Scholar Citation profile will make sure that Google Scholar will easily and accurately group all the citations of your publications into one pool. A profile generally lists your name, chosen keywords of research interest, generated citation metrics, and citations (including links to citing articles).
        </p>
        <p>
          In order to create a Google Scholar Citation profile, you need a Google Account.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <Alert
      allowDismiss={false}
      message="Error has occurred during request and request cannot be processed. failed! Please contact eSpace administrators or try again later."
      title="Error"
      type="error_outline"
    />
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Save Google Scholar ID"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;

exports[`Component GoogleScholar  should display submission in progress alert 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ul>
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ul>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Add your Google Scholar identifier"
    >
      <div>
        <p>
          Creating your Google Scholar Citation profile will make sure that Google Scholar will easily and accurately group all the citations of your publications into one pool. A profile generally lists your name, chosen keywords of research interest, generated citation metrics, and citations (including links to citing articles).
        </p>
        <p>
          In order to create a Google Scholar Citation profile, you need a Google Account.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            disabled={true}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <Alert
      allowDismiss={false}
      message="Request is being processed."
      title="Saving"
      type="info_outline"
    />
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={true}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={true}
          fullWidth={true}
          label="Save Google Scholar ID"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;

exports[`Component GoogleScholar  should render form if author doesn't have google scholar id 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ul>
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ul>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Add your Google Scholar identifier"
    >
      <div>
        <p>
          Creating your Google Scholar Citation profile will make sure that Google Scholar will easily and accurately group all the citations of your publications into one pool. A profile generally lists your name, chosen keywords of research interest, generated citation metrics, and citations (including links to citing articles).
        </p>
        <p>
          In order to create a Google Scholar Citation profile, you need a Google Account.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Save Google Scholar ID"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;

exports[`Component GoogleScholar  should render form if author has google scholar id 1`] = `
<StandardPage
  title="Google Scholar identifier"
>
  <form
    onKeyDown={[Function]}
  >
    <StandardCard
      className=""
      help={
        Object {
          "buttonLabel": "OK",
          "text": <div>
            <h3>
              How to create the profile?
            </h3>
            <ul>
              <li>
                Sign to your Google account, or create one if you don't have one.
              </li>
              <li>
                After you sign in, the Citations sign up form will ask you to confirm the spelling of your name, to enter your affiliation, etc.
              </li>
              <li>
                On the next page, you will see a list of articles. Add the articles that are yours.
              </li>
              <li>
                Once you're done with adding articles, it will ask you what to do when the article data changes in Google Scholar. You can either have the updates applied to your profile automatically or you can choose to review them beforehand.
              </li>
              <li>
                Finally, you will see your profile.Once you are satisfied with the results, make your profile public.
              </li>
            </ul>
          </div>,
          "title": "Google identifier help",
        }
      }
      title="Update your Google Scholar identifier"
    >
      <div>
        <p>
          Update your Google Scholar ID below.
        </p>
        <p>
          For more information see the 
          <a
            href="http://guides.library.uq.edu.au/researcher-identifiers/google-scholar-citations-profile"
            target="_blank"
          >
            Google Scholar Citations help page.
          </a>
        </p>
      </div>
      <div
        className="columns"
      >
        <div
          className="column"
        >
          <Field
            className="requiredField"
            component={[Function]}
            floatingLabelText="Google Scholar ID"
            fullWidth={true}
            hintText="Enter your Google Scholar ID"
            name="aut_google_scholar_id"
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </div>
      </div>
    </StandardCard>
    <div
      className="columns action-buttons"
    >
      <div
        className="column is-hidden-mobile"
      />
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Cancel"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={false}
        />
      </div>
      <div
        className="column is-narrow-desktop"
      >
        <RaisedButton
          disabled={false}
          fullWidth={true}
          label="Save Google Scholar ID"
          labelPosition="after"
          onTouchTap={[Function]}
          primary={false}
          secondary={true}
        />
      </div>
    </div>
  </form>
</StandardPage>
`;

exports[`Component GoogleScholar  should render nothing if author is not loaded 1`] = `<div />`;
